--- a/HeadOut/test-output/old/Default suite/methods-alphabetical.html
+++ b/HeadOut/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,18 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="95b478">  <td>19/04/01 22:03:13</td>   <td>0</td> <td title="&gt;&gt;Base.initialization()[pri:0, instance:com.headout.test.HomePageTest@100fc185]">&gt;&gt;initialization</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@32017212</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>19/04/01 22:03:20</td>   <td>7329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchMovie()[pri:0, instance:com.headout.test.HomePageTest@100fc185]">searchMovie</td> 
-  <td>main@32017212</td>   <td></td> </tr>
-<tr bgcolor="6f6bfd">  <td>19/04/01 22:03:30</td>   <td>17576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.selectMovie()[pri:0, instance:com.headout.test.HomePageTest@100fc185]">selectMovie</td> 
-  <td>main@32017212</td>   <td></td> </tr>
-<tr bgcolor="95b478">  <td>19/04/01 22:03:40</td>   <td>27685</td> <td title="&lt;&lt;Base.termination()[pri:0, instance:com.headout.test.HomePageTest@100fc185]">&lt;&lt;termination</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@32017212</td>   <td></td> </tr>
+<tr bgcolor="a09464">  <td>19/04/05 11:01:48</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CheckoutTest.checkoutDetails()[pri:0, instance:com.headout.test.CheckoutTest@7dc7cbad]">checkoutDetails</td> 
+  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="97cf78">  <td>19/04/05 11:01:31</td>   <td>-16500</td> <td title="&gt;&gt;Base.initialization()[pri:0, instance:com.headout.test.CheckoutTest@7dc7cbad]">&gt;&gt;initialization</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="7f6473">  <td>19/04/05 11:01:46</td>   <td>-2066</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.searchMovie()[pri:0, instance:com.headout.test.HomePageTest@724af044]">searchMovie</td> 
+  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="97b490">  <td>19/04/05 11:02:13</td>   <td>25097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelectDateTest.selectDate()[pri:0, instance:com.headout.test.SelectDateTest@5c7fa833]">selectDate</td> 
+  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="7f6473">  <td>19/04/05 11:01:47</td>   <td>-394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.selectMovie()[pri:0, instance:com.headout.test.HomePageTest@724af044]">selectMovie</td> 
+  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="7c74e5">  <td>19/04/05 11:02:03</td>   <td>15000</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SelectSeatTest.selectSeat()[pri:0, instance:com.headout.test.SelectSeatTest@39aeed2f]">selectSeat</td> 
+  <td>main@2107447833</td>   <td></td> </tr>
+<tr bgcolor="97cf78">  <td>19/04/05 11:02:14</td>   <td>25916</td> <td title="&lt;&lt;Base.termination()[pri:0, instance:com.headout.test.CheckoutTest@7dc7cbad]">&lt;&lt;termination</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2107447833</td>   <td></td> </tr>
 </table>
