--- a/HeadOut/test-output/old/Default suite/methods-not-run.html
+++ b/HeadOut/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,10 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>com.headout.base.Base.initialization</td></tr>
+<tr><td>com.headout.base.Base.initialization</td></tr>
+<tr><td>com.headout.base.Base.initialization</td></tr>
+<tr><td>com.headout.base.Base.initialization</td></tr>
+<tr><td>com.headout.base.Base.termination</td></tr>
+<tr><td>com.headout.base.Base.termination</td></tr>
+<tr><td>com.headout.base.Base.termination</td></tr>
+<tr><td>com.headout.base.Base.termination</td></tr>
 </table>
